Add SQL Database, Add new entities, Minor Changes in UI